# trajectory_execution_pkg

./: README.md
control_trajectory_execution/: CMakeLists.txt  README.md  package.xml
control_trajectory_execution/action/: control_tracking.action
control_trajectory_execution/config/: control_trajectory_execution.yaml  control_trajectory_execution_action_server.yaml
control_trajectory_execution/include/: control_trajectory_execution_action_server.h
control_trajectory_execution/launch/: control_trajectory_execution.launch
control_trajectory_execution/src/: control_trajectory_execution_action_server.cpp
moveit_trajectory_execution/: CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
moveit_trajectory_execution/action/: moveit_tracking.action
moveit_trajectory_execution/config/: moveit_trajectory_execution_action_server.yaml  offset.yaml
moveit_trajectory_execution/include/: moveit_trajectory_execution_action_server.h
moveit_trajectory_execution/launch/: moveit_trajectory_execution.launch
moveit_trajectory_execution/src/: moveit_trajectory_execution_action_server.cpp
trajectory_execution_example/: CMakeLists.txt  package.xml
trajectory_execution_example/csv/: trajectory_example.csv
trajectory_execution_example/launch/: trajectory_example_launch.launch
trajectory_execution_example/scripts/: trajectory_example.py
trajectory_execution_launch/: CMakeLists.txt  package.xml
trajectory_execution_launch/launch/: trajectory_execution_launch.launch
trajectory_execution_msgs/: CMakeLists.txt  package.xml
use_case/: CMakeLists.txt  package.xml
use_case/launch/: control_trajectory_execution_action_launch.launch
use_case_traj_exec/: CMakeLists.txt  package.xml
use_case_traj_exec/launch/: control_trajectory_execution_action_launch.launch  trajectory_execution_example.launch
use_case_traj_exec/scripts/: trajectory_csv_example.py
