<?xml version="1.0"?>
<package>
  <name>control_trajectory_execution</name>
  <version>0.0.0</version>
  <description>The control_trajectory_execution package</description>

  <maintainer email="ttsitos@todo.todo">ttsitos</maintainer>

  <license>TODO</license>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>trajectory_custom_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cartesian_state_msgs</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>trajectory_custom_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>cartesian_state_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
